[package]
name = "polkadot-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
hex-literal = "0.3.4"
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["bit-vec", "derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["bit-vec", "derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }

application-crypto = { package = "sp-application-crypto", git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
inherents = { package = "sp-inherents", git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
primitives = { package = "sp-core", git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-api = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-arithmetic = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-authority-discovery = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-consensus-slots = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-io = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-keystore = { git = "https://github.com/vikinatora/substrate", optional = true , branch = "light-logs-2" }
sp-staking = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-std = { package = "sp-std", git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }

polkadot-core-primitives = { path = "../core-primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
]
runtime-benchmarks = []
