[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-blockchain = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-keystore = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-api = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-consensus = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-consensus-babe = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-chain-spec = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-babe = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-babe-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-beefy = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-beefy-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-epochs = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-grandpa = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-consensus-grandpa-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sc-sync-state-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
mmr-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
pallet-transaction-payment-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-block-builder = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
substrate-state-trie-migration-rpc = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
