[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-blockchain = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-keystore = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-consensus = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-consensus-babe = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-chain-spec = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-babe = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-babe-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-beefy = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-beefy-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-epochs = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-grandpa = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-grandpa-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-sync-state-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
mmr-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
pallet-transaction-payment-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-block-builder = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
substrate-state-trie-migration-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
