[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
