[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
