[package]
name = "polkadot-service"
rust-version = "1.60"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
babe = { package = "sc-consensus-babe", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
beefy = { package = "sc-consensus-beefy", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
mmr-gadget = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-mmr-primitives = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs"}
sc-block-builder = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-chain-spec = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-client-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-client-db = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus-slots = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-executor = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-network = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-network-common = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-network-sync = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-transaction-pool = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-transaction-pool-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-sync-state-rpc = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-keystore = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-basic-authorship = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-offchain = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-sysinfo = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
service = { package = "sc-service", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
consensus_common = { package = "sp-consensus", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
grandpa_primitives = { package = "sp-consensus-grandpa", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-inherents = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-keyring = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-block-builder = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-blockchain = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-core = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-io = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-keystore = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-session = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-storage = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-transaction-pool = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
pallet-transaction-payment = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-trie = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-timestamp = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-consensus-babe = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-state-machine = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-weights = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-version = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
pallet-im-online = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
pallet-staking = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
frame-system = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
frame-support = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
frame-benchmarking-cli = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
frame-benchmarking = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }

# External Crates
futures = "0.3.21"
hex-literal = "0.4.1"
gum = { package = "tracing-gum", path = "../gum/" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.31"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.19.0", optional = true }
parity-db = { version = "0.4.8", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1" }

async-trait = "0.1.57"
lru = "0.11"
log = "0.4.17"
is_executable = "1.0.1"

# Polkadot
polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-overseer = { path = "../overseer" }
polkadot-parachain = { path = "../../parachain" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-node-subsystem = {path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-node-subsystem-types = { path = "../subsystem-types" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-node-network-protocol = { path = "../network/protocol" }
polkadot-runtime-common = { path = "../../runtime/common" }

# Polkadot Runtime Constants
polkadot-runtime-constants = { path = "../../runtime/polkadot/constants", optional = true }
kusama-runtime-constants = { path = "../../runtime/kusama/constants", optional = true }
rococo-runtime-constants = { path = "../../runtime/rococo/constants", optional = true }
westend-runtime-constants = { path = "../../runtime/westend/constants", optional = true }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { path = "../network/approval-distribution", optional = true }
polkadot-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
polkadot-availability-distribution = { path = "../network/availability-distribution", optional = true }
polkadot-availability-recovery = { path = "../network/availability-recovery", optional = true }
polkadot-collator-protocol = { path = "../network/collator-protocol", optional = true }
polkadot-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
polkadot-gossip-support = { path = "../network/gossip-support", optional = true }
polkadot-network-bridge = { path = "../network/bridge", optional = true }
polkadot-node-collation-generation = { path = "../collation-generation", optional = true }
polkadot-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
polkadot-node-core-av-store = { path = "../core/av-store", optional = true }
polkadot-node-core-backing = { path = "../core/backing", optional = true }
polkadot-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
polkadot-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
polkadot-node-core-chain-api = { path = "../core/chain-api", optional = true }
polkadot-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
polkadot-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
polkadot-node-core-provisioner = { path = "../core/provisioner", optional = true }
polkadot-node-core-pvf = { path = "../core/pvf", optional = true }
polkadot-node-core-pvf-checker = { path = "../core/pvf-checker", optional = true }
polkadot-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
polkadot-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../test/client" }
polkadot-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
assert_matches = "1.5.0"
serial_test = "2.0.0"
tempfile = "3.2"

[features]
default = ["db", "full-node"]

db = [
	"service/rocksdb"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"polkadot-node-core-pvf",
	"polkadot-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = [ "polkadot-runtime", "polkadot-runtime-constants" ]
kusama-native = [ "kusama-runtime", "kusama-runtime-constants" ]
westend-native = [ "westend-runtime", "westend-runtime-constants" ]
rococo-native = [ "rococo-runtime", "rococo-runtime-constants" ]

runtime-benchmarks = [
	"polkadot-runtime?/runtime-benchmarks",
	"kusama-runtime?/runtime-benchmarks",
	"westend-runtime?/runtime-benchmarks",
	"rococo-runtime?/runtime-benchmarks",

	"service/runtime-benchmarks",
]
try-runtime = [
	"polkadot-runtime?/try-runtime",
	"kusama-runtime?/try-runtime",
	"westend-runtime?/try-runtime",
	"rococo-runtime?/try-runtime",
]
fast-runtime = [
	"polkadot-runtime?/fast-runtime",
	"kusama-runtime?/fast-runtime",
	"westend-runtime?/fast-runtime",
	"rococo-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"rococo-runtime?/runtime-metrics",
	"westend-runtime?/runtime-metrics",
	"kusama-runtime?/runtime-metrics",
	"polkadot-runtime?/runtime-metrics",
	"polkadot-runtime-parachains/runtime-metrics"
]
