[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "light-logs-2" }
sp-core = { git = "https://github.com/vikinatora/substrate", features = ["std"] , branch = "light-logs-2" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
