[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs", default-features = false }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-core = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs", features = ["std"] }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
