[package]
name = "polkadot-runtime-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/vikinatora/substrate", default-features = false, branch = "light-logs-2" }
sp-tracing = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
parity-scale-codec = { version = "3.3.0", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing"]
