[package]
name = "pallet-xcm"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
bounded-collections = { version = "0.1.8", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.163", optional = true, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

frame-benchmarking = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs", default-features = false, optional = true }
frame-support = { git = "https://github.com/vikinatora/substrate", default-features = false, branch = "grandpa-logs" }
frame-system = { git = "https://github.com/vikinatora/substrate", default-features = false, branch = "grandpa-logs" }
sp-core = { git = "https://github.com/vikinatora/substrate", default-features = false, branch = "grandpa-logs" }
sp-io = { git = "https://github.com/vikinatora/substrate", default-features = false, branch = "grandpa-logs" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", default-features = false, branch = "grandpa-logs" }
sp-std = { git = "https://github.com/vikinatora/substrate", default-features = false, branch = "grandpa-logs" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-parachain = { path = "../../parachain" }
xcm-builder = { path = "../xcm-builder" }

[features]
default = ["std"]
# Enable `VersionedRuntimeUpgrade` for the migrations that is currently still experimental.
experimental = [
	"frame-support/experimental"
]
std = [
	"bounded-collections/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
