[package]
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
impl-trait-for-tuples = "0.2.2"
environmental = { version = "1.1.4", default-features = false }
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-io = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-arithmetic = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-core = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-weights = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
frame-support = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
log = { version = "0.4.17", default-features = false }
frame-benchmarking = { git = "https://github.com/vikinatora/substrate", default-features = false, optional = true , branch = "light-logs-2" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
std = [
	"parity-scale-codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"frame-support/std",
	"log/std",
]
