[package]
name = "polkadot-node-core-pvf-checker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }

polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-overseer = { path = "../../overseer" }

sp-keystore = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }

[dev-dependencies]
sp-core = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-keystore = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-keyring = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers"}
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives/test-helpers" }
sp-application-crypto = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
futures-timer = "3.0.2"
