[package]
name = "polkadot-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-service = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-block-builder = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-consensus = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sc-offchain = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-blockchain = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-runtime = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-inherents = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-core = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-api = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-timestamp = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-consensus = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-consensus-babe = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-state-machine = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
sp-io = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
frame-benchmarking = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
futures = "0.3.21"

[features]
runtime-benchmarks=["polkadot-test-runtime/runtime-benchmarks"]
