[package]
name = "test-parachain-halt"
description = "Test parachain which executes forever"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs" }
rustversion = "1.0.6"

[features]
default = [ "std" ]
std = []
