[package]
name = "test-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = "1.11.0"

frame-support = { git = "https://github.com/vikinatora/substrate", branch = "grandpa-logs", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "grandpa-logs" }
sp-weights = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "grandpa-logs" }
sp-core = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "grandpa-logs" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"runtime-common/std",
	"primitives/std",
	"frame-support/std",
]
