[package]
name = "westend-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-weights = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }
sp-core = { git = "https://github.com/vikinatora/substrate", default-features = false , branch = "light-logs-2" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]
